src/objects/Dummy_Goods_Inward__c.object
<CustomObject>
    <description>This object is being used for Su-Kam Invoices</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Goods_Inward</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Base_Value__c</fullName>
        <label>Base Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Defective_Quantity__c</fullName>
        <label>Defective Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <description>This will contain the grand total for the invoice</description>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <description>Thsi wil contain the Invoice date</description>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_No__c</fullName>
        <description>This will contain the invoice no.</description>
        <label>Oracle Invoice No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inward_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inward_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Date_Time__c</fullName>
        <formula>Order_Details__r.Order_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will help to look up to the order details</description>
        <label>Order Details</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Sukam Invoices</relationshipLabel>
        <relationshipName>Sukam_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Name__c</fullName>
        <description>This field will be auto-populated with the Order Name that is used while order creation</description>
        <label>Order Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <description>This will contain the order no. details</description>
        <label>Order No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Sukam Invoices</relationshipLabel>
        <relationshipName>Sukam_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Transit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_Val__c</fullName>
        <formula>Base_Value__c   + VAT__c*Base_Value__c /100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Invoice Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_Value__c</fullName>
        <label>Total Invoice Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usable_Quantity__c</fullName>
        <label>Usable Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Sukam Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IN-{00000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sukam Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>